# MotivationLettersIA

./: LICENSE  README.md  agents.py  check_dependencies.py  check_quota.py  cleanup.sh  direct_approach.py  fix_dependencies.py  install.sh  launcher.py  main.py  pyproject.toml  quota_manager.py  requirements.txt  run.sh  t.txt  test.txt  user_session.py
backup_20250321_193043/: agents.py  lettre.txt  tasks.py  test_gemini.py  testprout.txt
tools/: scraping_tools.py
user_sessions/: session_20250323_225904.json
